--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "robotfriends",
+  "homepage": "https://github.com/minimomo14/robotfriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,10 +14,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
