added homepage url to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robotfriends",
-  "homepage": "https://github.com/minimomo14/robotfriends",
+  "homepage": "https://minimomo14.github.io/robotfriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
